syntax = "proto3";
package dipstick.core.v1;

import "dipstick/core/v1/entity.proto";
import "dipstick/core/v1/logging.proto";

// Server control services.
service CoreService {
  // Shuts down the server.
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);

  // Returns the version of the server.
  rpc Version(VersionRequest) returns (VersionResponse);

  // Configures or queries the server's logging.
  rpc LogConfig(LogConfigRequest) returns (LogConfigResponse);
  // Subscribes to the server's logging.
  rpc LogSubscribe(LogSubscribeRequest) returns (stream LogSubscribeResponse);

  rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesResponse);
}

// Shutdown request
message ShutdownRequest {}

// Shutdown response
message ShutdownResponse {}

// Version request
message VersionRequest {}

// Version response
message VersionResponse {
  // The version of the server.
  string version = 1;
}

// LogConfig request
message LogConfigRequest {
  // The new logging configuration.
  // If empty, the current configuration is returned.
  LogConfig config = 1;
}

// LogConfig response
message LogConfigResponse {
  // The current logging configuration.
  LogConfig config = 1;
}

// LogSubscribe request
message LogSubscribeRequest {}

// LogSubscribe response
message LogSubscribeResponse {
  // A log event.
  LogEvent event = 1;
}

// ListEntities request
message ListEntitiesRequest {}

// ListEntities response
message ListEntitiesResponse {
  // The list of entities.
  repeated EntityMeta entities = 1;
}
